feat(connection): added procedure to kill all remaining heavy queries

--- a/tests/test_train_ratios.ipynb
+++ b/tests/test_train_ratios.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 97,
    "id": "b1871057",
    "metadata": {},
    "outputs": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 98,
    "id": "e40df6d1",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 99,
    "id": "a46d1bd5",
    "metadata": {},
    "outputs": [
@@ -75,7 +75,37 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>SELECT id, ident, name FROM airport WHERE iso_...</td>\n",
+       "      <td>UPDATE regions SET keywords = \"Kärnten\" WHERE ...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>update</td>\n",
+       "      <td>airport-U9</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>test</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>INSERT INTO regions (code, local_code, name, c...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>recon</td>\n",
+       "      <td>space2mysqlblank</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>insert</td>\n",
+       "      <td>airport-I5</td>\n",
+       "      <td>error-5</td>\n",
+       "      <td>error</td>\n",
+       "      <td>test</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>SELECT 'Airport Frequency' as source_type, af....</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -83,39 +113,9 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>select</td>\n",
-       "      <td>airport-S6</td>\n",
+       "      <td>airport-S13</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>test</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>SELECT a.id, a.name, a.municipality, a.iso_cou...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>recon</td>\n",
-       "      <td>sleep2getlock</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>select</td>\n",
-       "      <td>airport-S10</td>\n",
-       "      <td>error-2</td>\n",
-       "      <td>error</td>\n",
-       "      <td>test</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>SELECT * FROM airport WHERE continent = \"EU') ...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>recon</td>\n",
-       "      <td>multiplespaces</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>select</td>\n",
-       "      <td>airport-S8</td>\n",
-       "      <td>error-3</td>\n",
-       "      <td>error</td>\n",
        "      <td>test</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -125,7 +125,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>recon</td>\n",
-       "      <td>lowercase</td>\n",
+       "      <td>space2comment</td>\n",
        "      <td>NaN</td>\n",
        "      <td>insert</td>\n",
        "      <td>airport-I9</td>\n",
@@ -135,17 +135,17 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>UPDATE airport SET wikipedia_link = \"https://e...</td>\n",
-       "      <td>1</td>\n",
+       "      <td>INSERT INTO airport (ident, type, name, latitu...</td>\n",
+       "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>recon</td>\n",
-       "      <td>equaltolike</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>update</td>\n",
-       "      <td>airport-U3</td>\n",
-       "      <td>error-6</td>\n",
-       "      <td>error</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>insert</td>\n",
+       "      <td>airport-I2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>test</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -164,139 +164,126 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14900</th>\n",
-       "      <td>DELETE FROM airport WHERE name = \"Costa Esmera...</td>\n",
+       "      <th>39681</th>\n",
+       "      <td>INSERT INTO countries (code, name, continent, ...</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>delete</td>\n",
-       "      <td>airport-D2</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>train</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14901</th>\n",
-       "      <td>SELECT icao_code, iata_code, local_code FROM a...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>select</td>\n",
-       "      <td>airport-S3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>train</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14902</th>\n",
-       "      <td>UPDATE airport SET wikipedia_link = \"https://e...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>recon</td>\n",
-       "      <td>commentbeforeparentheses</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>update</td>\n",
-       "      <td>airport-U3</td>\n",
-       "      <td>error-6</td>\n",
-       "      <td>error</td>\n",
-       "      <td>train</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14903</th>\n",
-       "      <td>INSERT INTO runways (airport_ref, airport_iden...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>recon</td>\n",
-       "      <td>lowercase</td>\n",
        "      <td>NaN</td>\n",
        "      <td>insert</td>\n",
-       "      <td>airport-I9</td>\n",
-       "      <td>error-7</td>\n",
-       "      <td>error</td>\n",
-       "      <td>train</td>\n",
+       "      <td>airport-I6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>test</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14904</th>\n",
-       "      <td>SELECT icao_code, iata_code, local_code FROM a...</td>\n",
+       "      <th>39682</th>\n",
+       "      <td>INSERT INTO regions (code, name, continent, is...</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>select</td>\n",
-       "      <td>airport-S3</td>\n",
+       "      <td>insert</td>\n",
+       "      <td>airport-I4</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>train</td>\n",
+       "      <td>test</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39683</th>\n",
+       "      <td>INSERT INTO regions (code, name, continent, is...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>insert</td>\n",
+       "      <td>airport-I4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>test</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39684</th>\n",
+       "      <td>INSERT INTO regions (code, local_code, name, c...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>insert</td>\n",
+       "      <td>airport-I5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>test</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39685</th>\n",
+       "      <td>INSERT INTO countries (code, name, continent, ...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>insert</td>\n",
+       "      <td>airport-I6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>test</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>14905 rows × 12 columns</p>\n",
+       "<p>39686 rows × 12 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                                              full_query  label  \\\n",
-       "0      SELECT id, ident, name FROM airport WHERE iso_...      0   \n",
-       "1      SELECT a.id, a.name, a.municipality, a.iso_cou...      1   \n",
-       "2      SELECT * FROM airport WHERE continent = \"EU') ...      1   \n",
+       "0      UPDATE regions SET keywords = \"Kärnten\" WHERE ...      0   \n",
+       "1      INSERT INTO regions (code, local_code, name, c...      1   \n",
+       "2      SELECT 'Airport Frequency' as source_type, af....      0   \n",
        "3      INSERT INTO runways (airport_ref, airport_iden...      1   \n",
-       "4      UPDATE airport SET wikipedia_link = \"https://e...      1   \n",
+       "4      INSERT INTO airport (ident, type, name, latitu...      0   \n",
        "...                                                  ...    ...   \n",
-       "14900  DELETE FROM airport WHERE name = \"Costa Esmera...      0   \n",
-       "14901  SELECT icao_code, iata_code, local_code FROM a...      0   \n",
-       "14902  UPDATE airport SET wikipedia_link = \"https://e...      1   \n",
-       "14903  INSERT INTO runways (airport_ref, airport_iden...      1   \n",
-       "14904  SELECT icao_code, iata_code, local_code FROM a...      0   \n",
+       "39681  INSERT INTO countries (code, name, continent, ...      0   \n",
+       "39682  INSERT INTO regions (code, name, continent, is...      0   \n",
+       "39683  INSERT INTO regions (code, name, continent, is...      0   \n",
+       "39684  INSERT INTO regions (code, local_code, name, c...      0   \n",
+       "39685  INSERT INTO countries (code, name, continent, ...      0   \n",
        "\n",
-       "      attack_payload attack_desc attack_stage             tamper_method  \\\n",
-       "0                NaN         NaN          NaN                       NaN   \n",
-       "1                NaN         NaN        recon             sleep2getlock   \n",
-       "2                NaN         NaN        recon            multiplespaces   \n",
-       "3                NaN         NaN        recon                 lowercase   \n",
-       "4                NaN         NaN        recon               equaltolike   \n",
-       "...              ...         ...          ...                       ...   \n",
-       "14900            NaN         NaN          NaN                       NaN   \n",
-       "14901            NaN         NaN          NaN                       NaN   \n",
-       "14902            NaN         NaN        recon  commentbeforeparentheses   \n",
-       "14903            NaN         NaN        recon                 lowercase   \n",
-       "14904            NaN         NaN          NaN                       NaN   \n",
+       "      attack_payload attack_desc attack_stage     tamper_method sqlmap_status  \\\n",
+       "0                NaN         NaN          NaN               NaN           NaN   \n",
+       "1                NaN         NaN        recon  space2mysqlblank           NaN   \n",
+       "2                NaN         NaN          NaN               NaN           NaN   \n",
+       "3                NaN         NaN        recon     space2comment           NaN   \n",
+       "4                NaN         NaN          NaN               NaN           NaN   \n",
+       "...              ...         ...          ...               ...           ...   \n",
+       "39681            NaN         NaN          NaN               NaN           NaN   \n",
+       "39682            NaN         NaN          NaN               NaN           NaN   \n",
+       "39683            NaN         NaN          NaN               NaN           NaN   \n",
+       "39684            NaN         NaN          NaN               NaN           NaN   \n",
+       "39685            NaN         NaN          NaN               NaN           NaN   \n",
        "\n",
-       "      sqlmap_status statement_type query_template_id attack_id  \\\n",
-       "0               NaN         select        airport-S6       NaN   \n",
-       "1               NaN         select       airport-S10   error-2   \n",
-       "2               NaN         select        airport-S8   error-3   \n",
-       "3               NaN         insert        airport-I9   error-7   \n",
-       "4               NaN         update        airport-U3   error-6   \n",
-       "...             ...            ...               ...       ...   \n",
-       "14900           NaN         delete        airport-D2       NaN   \n",
-       "14901           NaN         select        airport-S3       NaN   \n",
-       "14902           NaN         update        airport-U3   error-6   \n",
-       "14903           NaN         insert        airport-I9   error-7   \n",
-       "14904           NaN         select        airport-S3       NaN   \n",
+       "      statement_type query_template_id attack_id attack_technique split  \n",
+       "0             update        airport-U9       NaN              NaN  test  \n",
+       "1             insert        airport-I5   error-5            error  test  \n",
+       "2             select       airport-S13       NaN              NaN  test  \n",
+       "3             insert        airport-I9   error-7            error  test  \n",
+       "4             insert        airport-I2       NaN              NaN  test  \n",
+       "...              ...               ...       ...              ...   ...  \n",
+       "39681         insert        airport-I6       NaN              NaN  test  \n",
+       "39682         insert        airport-I4       NaN              NaN  test  \n",
+       "39683         insert        airport-I4       NaN              NaN  test  \n",
+       "39684         insert        airport-I5       NaN              NaN  test  \n",
+       "39685         insert        airport-I6       NaN              NaN  test  \n",
        "\n",
-       "      attack_technique  split  \n",
-       "0                  NaN   test  \n",
-       "1                error   test  \n",
-       "2                error   test  \n",
-       "3                error   test  \n",
-       "4                error   test  \n",
-       "...                ...    ...  \n",
-       "14900              NaN  train  \n",
-       "14901              NaN  train  \n",
-       "14902            error  train  \n",
-       "14903            error  train  \n",
-       "14904              NaN  train  \n",
-       "\n",
-       "[14905 rows x 12 columns]"
+       "[39686 rows x 12 columns]"
       ]
      },
      "metadata": {},
@@ -331,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 100,
    "id": "1341d47f",
    "metadata": {},
    "outputs": [
@@ -339,10 +326,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of attacks in train: 4317\n",
-      "Number of normal in train: 5577\n",
-      "Number of attacks in test: 2525\n",
-      "Number of normal in test: 2486\n"
+      "Number of attacks in train: 4296\n",
+      "Number of normal in train: 5525\n",
+      "Number of attacks in test: 2490\n",
+      "Number of normal in test: 27375\n"
      ]
     }
    ],
@@ -364,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 101,
    "id": "a6b80761",
    "metadata": {},
    "outputs": [
@@ -372,24 +359,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Template IDS in df train: 42, ['airport-D5' 'airport-S12' 'airport-S10' 'airport-S4' 'airport-S15'\n",
-      " 'airport-S11' 'airport-D4' 'airport-I6' 'airport-U4' 'airport-D7'\n",
-      " 'airport-I5' 'airport-D6' 'airport-S5' 'airport-I7' 'airport-I9'\n",
-      " 'airport-S2' 'airport-U3' 'airport-S6' 'airport-S16' 'airport-S8'\n",
-      " 'airport-U8' 'airport-S17' 'airport-U7' 'airport-U2' 'airport-S1'\n",
-      " 'airport-S7' 'airport-S13' 'airport-S3' 'airport-S9' 'airport-U9'\n",
-      " 'airport-I3' 'airport-U6' 'airport-D1' 'airport-I2' 'airport-D2'\n",
-      " 'airport-I8' 'airport-I1' 'airport-I10' 'airport-D3' 'airport-U1'\n",
-      " 'airport-D8' 'airport-U5']\n",
-      "Template IDS in df test:   44, ['airport-S6' 'airport-S10' 'airport-S8' 'airport-I9' 'airport-U3'\n",
-      " 'airport-D1' 'airport-I5' 'airport-I4' 'airport-S15' 'airport-S1'\n",
-      " 'airport-S14' 'airport-S16' 'airport-S17' 'airport-S9' 'airport-D6'\n",
-      " 'airport-D8' 'airport-U7' 'airport-D5' 'airport-I7' 'airport-S11'\n",
-      " 'airport-S13' 'airport-S3' 'airport-U6' 'airport-S12' 'airport-S4'\n",
-      " 'airport-S5' 'airport-S7' 'airport-S2' 'airport-U5' 'airport-U1'\n",
-      " 'airport-I2' 'airport-I1' 'airport-U2' 'airport-I10' 'airport-U4'\n",
-      " 'airport-D7' 'airport-I8' 'airport-D3' 'airport-U9' 'airport-D2'\n",
-      " 'airport-D4' 'airport-I6' 'airport-U8' 'airport-I3']\n",
+      "Template IDS in df train: 42, ['airport-S3' 'airport-I3' 'airport-I5' 'airport-S8' 'airport-D2'\n",
+      " 'airport-I2' 'airport-S10' 'airport-I6' 'airport-U3' 'airport-S17'\n",
+      " 'airport-S4' 'airport-S15' 'airport-S2' 'airport-S9' 'airport-S1'\n",
+      " 'airport-D8' 'airport-S7' 'airport-U4' 'airport-S5' 'airport-I9'\n",
+      " 'airport-D1' 'airport-S12' 'airport-S13' 'airport-S11' 'airport-S6'\n",
+      " 'airport-D5' 'airport-U1' 'airport-I7' 'airport-D6' 'airport-I8'\n",
+      " 'airport-S16' 'airport-U8' 'airport-U9' 'airport-I1' 'airport-U2'\n",
+      " 'airport-D7' 'airport-U7' 'airport-U6' 'airport-U5' 'airport-D4'\n",
+      " 'airport-D3' 'airport-I10']\n",
+      "Template IDS in df test:   44, ['airport-U9' 'airport-I5' 'airport-S13' 'airport-I9' 'airport-I2'\n",
+      " 'airport-S8' 'airport-S14' 'airport-U8' 'airport-U3' 'airport-S2'\n",
+      " 'airport-S1' 'airport-I4' 'airport-S3' 'airport-S15' 'airport-I3'\n",
+      " 'airport-S17' 'airport-S10' 'airport-S11' 'airport-S4' 'airport-U4'\n",
+      " 'airport-D2' 'airport-D6' 'airport-S5' 'airport-D8' 'airport-I10'\n",
+      " 'airport-S16' 'airport-S6' 'airport-S9' 'airport-U6' 'airport-S12'\n",
+      " 'airport-D1' 'airport-D4' 'airport-U2' 'airport-U5' 'airport-U7'\n",
+      " 'airport-S7' 'airport-I7' 'airport-U1' 'airport-D5' 'airport-I6'\n",
+      " 'airport-D3' 'airport-I1' 'airport-D7' 'airport-I8']\n",
       "Template IDs in train but NOT in test: 2, ['airport-I4', 'airport-S14']\n"
      ]
     }
