--- a/tests/test_train_ratios.ipynb
+++ b/tests/test_train_ratios.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 1,
    "id": "b1871057",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2 "
@@ -22,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 2,
    "id": "e40df6d1",
    "metadata": {},
    "outputs": [],
@@ -33,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 3,
    "id": "a46d1bd5",
    "metadata": {},
    "outputs": [
@@ -75,37 +66,37 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>UPDATE regions SET keywords = \"Kärnten\" WHERE ...</td>\n",
+       "      <td>DELETE FROM navaids WHERE ident = \"PO\";</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>update</td>\n",
-       "      <td>airport-U9</td>\n",
+       "      <td>delete</td>\n",
+       "      <td>airport-D6</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>test</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>INSERT INTO regions (code, local_code, name, c...</td>\n",
+       "      <td>SELECT a.id, a.name, a.municipality, a.iso_cou...</td>\n",
        "      <td>1</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>recon</td>\n",
-       "      <td>space2mysqlblank</td>\n",
+       "      <td>commentbeforeparentheses</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>insert</td>\n",
-       "      <td>airport-I5</td>\n",
-       "      <td>error-5</td>\n",
+       "      <td>select</td>\n",
+       "      <td>airport-S10</td>\n",
+       "      <td>error-3</td>\n",
        "      <td>error</td>\n",
        "      <td>test</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>SELECT 'Airport Frequency' as source_type, af....</td>\n",
+       "      <td>SELECT a.id, a.name, a.municipality, a.iso_cou...</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -113,39 +104,39 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>select</td>\n",
-       "      <td>airport-S13</td>\n",
+       "      <td>airport-S10</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>test</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>INSERT INTO runways (airport_ref, airport_iden...</td>\n",
+       "      <td>INSERT INTO regions (code, name, continent, is...</td>\n",
        "      <td>1</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>recon</td>\n",
-       "      <td>space2comment</td>\n",
+       "      <td>space2mysqlblank</td>\n",
        "      <td>NaN</td>\n",
        "      <td>insert</td>\n",
-       "      <td>airport-I9</td>\n",
-       "      <td>error-7</td>\n",
+       "      <td>airport-I4</td>\n",
+       "      <td>error-9</td>\n",
        "      <td>error</td>\n",
        "      <td>test</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>INSERT INTO airport (ident, type, name, latitu...</td>\n",
-       "      <td>0</td>\n",
+       "      <td>SELECT a.id, a.name, a.municipality, a.iso_cou...</td>\n",
+       "      <td>1</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>recon</td>\n",
+       "      <td>randomcase</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>insert</td>\n",
-       "      <td>airport-I2</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>select</td>\n",
+       "      <td>airport-S10</td>\n",
+       "      <td>error-3</td>\n",
+       "      <td>error</td>\n",
        "      <td>test</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -164,22 +155,22 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>39681</th>\n",
-       "      <td>INSERT INTO countries (code, name, continent, ...</td>\n",
+       "      <th>37011</th>\n",
+       "      <td>SELECT a.id, a.ident, a.name, a.latitude_deg, ...</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>insert</td>\n",
-       "      <td>airport-I6</td>\n",
+       "      <td>select</td>\n",
+       "      <td>airport-S14</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>test</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>39682</th>\n",
+       "      <th>37012</th>\n",
        "      <td>INSERT INTO regions (code, name, continent, is...</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
@@ -194,96 +185,109 @@
        "      <td>test</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>39683</th>\n",
-       "      <td>INSERT INTO regions (code, name, continent, is...</td>\n",
+       "      <th>37013</th>\n",
+       "      <td>SELECT a.id, a.ident, a.name, a.latitude_deg, ...</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>insert</td>\n",
-       "      <td>airport-I4</td>\n",
+       "      <td>select</td>\n",
+       "      <td>airport-S14</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>test</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>39684</th>\n",
-       "      <td>INSERT INTO regions (code, local_code, name, c...</td>\n",
+       "      <th>37014</th>\n",
+       "      <td>SELECT a.id, a.ident, a.name, a.latitude_deg, ...</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>insert</td>\n",
-       "      <td>airport-I5</td>\n",
+       "      <td>select</td>\n",
+       "      <td>airport-S14</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>test</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>39685</th>\n",
-       "      <td>INSERT INTO countries (code, name, continent, ...</td>\n",
+       "      <th>37015</th>\n",
+       "      <td>SELECT a.id, a.ident, a.name, a.latitude_deg, ...</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>insert</td>\n",
-       "      <td>airport-I6</td>\n",
+       "      <td>select</td>\n",
+       "      <td>airport-S14</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>test</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>39686 rows × 12 columns</p>\n",
+       "<p>37016 rows × 12 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                                              full_query  label  \\\n",
-       "0      UPDATE regions SET keywords = \"Kärnten\" WHERE ...      0   \n",
-       "1      INSERT INTO regions (code, local_code, name, c...      1   \n",
-       "2      SELECT 'Airport Frequency' as source_type, af....      0   \n",
-       "3      INSERT INTO runways (airport_ref, airport_iden...      1   \n",
-       "4      INSERT INTO airport (ident, type, name, latitu...      0   \n",
+       "0                DELETE FROM navaids WHERE ident = \"PO\";      0   \n",
+       "1      SELECT a.id, a.name, a.municipality, a.iso_cou...      1   \n",
+       "2      SELECT a.id, a.name, a.municipality, a.iso_cou...      0   \n",
+       "3      INSERT INTO regions (code, name, continent, is...      1   \n",
+       "4      SELECT a.id, a.name, a.municipality, a.iso_cou...      1   \n",
        "...                                                  ...    ...   \n",
-       "39681  INSERT INTO countries (code, name, continent, ...      0   \n",
-       "39682  INSERT INTO regions (code, name, continent, is...      0   \n",
-       "39683  INSERT INTO regions (code, name, continent, is...      0   \n",
-       "39684  INSERT INTO regions (code, local_code, name, c...      0   \n",
-       "39685  INSERT INTO countries (code, name, continent, ...      0   \n",
+       "37011  SELECT a.id, a.ident, a.name, a.latitude_deg, ...      0   \n",
+       "37012  INSERT INTO regions (code, name, continent, is...      0   \n",
+       "37013  SELECT a.id, a.ident, a.name, a.latitude_deg, ...      0   \n",
+       "37014  SELECT a.id, a.ident, a.name, a.latitude_deg, ...      0   \n",
+       "37015  SELECT a.id, a.ident, a.name, a.latitude_deg, ...      0   \n",
        "\n",
-       "      attack_payload attack_desc attack_stage     tamper_method sqlmap_status  \\\n",
-       "0                NaN         NaN          NaN               NaN           NaN   \n",
-       "1                NaN         NaN        recon  space2mysqlblank           NaN   \n",
-       "2                NaN         NaN          NaN               NaN           NaN   \n",
-       "3                NaN         NaN        recon     space2comment           NaN   \n",
-       "4                NaN         NaN          NaN               NaN           NaN   \n",
-       "...              ...         ...          ...               ...           ...   \n",
-       "39681            NaN         NaN          NaN               NaN           NaN   \n",
-       "39682            NaN         NaN          NaN               NaN           NaN   \n",
-       "39683            NaN         NaN          NaN               NaN           NaN   \n",
-       "39684            NaN         NaN          NaN               NaN           NaN   \n",
-       "39685            NaN         NaN          NaN               NaN           NaN   \n",
+       "      attack_payload attack_desc attack_stage             tamper_method  \\\n",
+       "0                NaN         NaN          NaN                       NaN   \n",
+       "1                NaN         NaN        recon  commentbeforeparentheses   \n",
+       "2                NaN         NaN          NaN                       NaN   \n",
+       "3                NaN         NaN        recon          space2mysqlblank   \n",
+       "4                NaN         NaN        recon                randomcase   \n",
+       "...              ...         ...          ...                       ...   \n",
+       "37011            NaN         NaN          NaN                       NaN   \n",
+       "37012            NaN         NaN          NaN                       NaN   \n",
+       "37013            NaN         NaN          NaN                       NaN   \n",
+       "37014            NaN         NaN          NaN                       NaN   \n",
+       "37015            NaN         NaN          NaN                       NaN   \n",
        "\n",
-       "      statement_type query_template_id attack_id attack_technique split  \n",
-       "0             update        airport-U9       NaN              NaN  test  \n",
-       "1             insert        airport-I5   error-5            error  test  \n",
-       "2             select       airport-S13       NaN              NaN  test  \n",
-       "3             insert        airport-I9   error-7            error  test  \n",
-       "4             insert        airport-I2       NaN              NaN  test  \n",
-       "...              ...               ...       ...              ...   ...  \n",
-       "39681         insert        airport-I6       NaN              NaN  test  \n",
-       "39682         insert        airport-I4       NaN              NaN  test  \n",
-       "39683         insert        airport-I4       NaN              NaN  test  \n",
-       "39684         insert        airport-I5       NaN              NaN  test  \n",
-       "39685         insert        airport-I6       NaN              NaN  test  \n",
+       "      sqlmap_status statement_type query_template_id attack_id  \\\n",
+       "0               NaN         delete        airport-D6       NaN   \n",
+       "1               NaN         select       airport-S10   error-3   \n",
+       "2               NaN         select       airport-S10       NaN   \n",
+       "3               NaN         insert        airport-I4   error-9   \n",
+       "4               NaN         select       airport-S10   error-3   \n",
+       "...             ...            ...               ...       ...   \n",
+       "37011           NaN         select       airport-S14       NaN   \n",
+       "37012           NaN         insert        airport-I4       NaN   \n",
+       "37013           NaN         select       airport-S14       NaN   \n",
+       "37014           NaN         select       airport-S14       NaN   \n",
+       "37015           NaN         select       airport-S14       NaN   \n",
        "\n",
-       "[39686 rows x 12 columns]"
+       "      attack_technique split  \n",
+       "0                  NaN  test  \n",
+       "1                error  test  \n",
+       "2                  NaN  test  \n",
+       "3                error  test  \n",
+       "4                error  test  \n",
+       "...                ...   ...  \n",
+       "37011              NaN  test  \n",
+       "37012              NaN  test  \n",
+       "37013              NaN  test  \n",
+       "37014              NaN  test  \n",
+       "37015              NaN  test  \n",
+       "\n",
+       "[37016 rows x 12 columns]"
       ]
      },
      "metadata": {},
@@ -318,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 4,
    "id": "1341d47f",
    "metadata": {},
    "outputs": [
@@ -326,10 +330,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of attacks in train: 4296\n",
-      "Number of normal in train: 5525\n",
-      "Number of attacks in test: 2490\n",
-      "Number of normal in test: 27375\n"
+      "Number of attacks in train: 4132\n",
+      "Number of normal in train: 4261\n",
+      "Number of attacks in test: 2382\n",
+      "Number of normal in test: 26241\n"
      ]
     }
    ],
@@ -351,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 10,
    "id": "a6b80761",
    "metadata": {},
    "outputs": [
@@ -359,40 +363,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Template IDS in df train: 42, ['airport-S3' 'airport-I3' 'airport-I5' 'airport-S8' 'airport-D2'\n",
-      " 'airport-I2' 'airport-S10' 'airport-I6' 'airport-U3' 'airport-S17'\n",
-      " 'airport-S4' 'airport-S15' 'airport-S2' 'airport-S9' 'airport-S1'\n",
-      " 'airport-D8' 'airport-S7' 'airport-U4' 'airport-S5' 'airport-I9'\n",
-      " 'airport-D1' 'airport-S12' 'airport-S13' 'airport-S11' 'airport-S6'\n",
-      " 'airport-D5' 'airport-U1' 'airport-I7' 'airport-D6' 'airport-I8'\n",
-      " 'airport-S16' 'airport-U8' 'airport-U9' 'airport-I1' 'airport-U2'\n",
-      " 'airport-D7' 'airport-U7' 'airport-U6' 'airport-U5' 'airport-D4'\n",
-      " 'airport-D3' 'airport-I10']\n",
-      "Template IDS in df test:   44, ['airport-U9' 'airport-I5' 'airport-S13' 'airport-I9' 'airport-I2'\n",
-      " 'airport-S8' 'airport-S14' 'airport-U8' 'airport-U3' 'airport-S2'\n",
-      " 'airport-S1' 'airport-I4' 'airport-S3' 'airport-S15' 'airport-I3'\n",
-      " 'airport-S17' 'airport-S10' 'airport-S11' 'airport-S4' 'airport-U4'\n",
-      " 'airport-D2' 'airport-D6' 'airport-S5' 'airport-D8' 'airport-I10'\n",
-      " 'airport-S16' 'airport-S6' 'airport-S9' 'airport-U6' 'airport-S12'\n",
-      " 'airport-D1' 'airport-D4' 'airport-U2' 'airport-U5' 'airport-U7'\n",
-      " 'airport-S7' 'airport-I7' 'airport-U1' 'airport-D5' 'airport-I6'\n",
-      " 'airport-D3' 'airport-I1' 'airport-D7' 'airport-I8']\n",
-      "Template IDs in train but NOT in test: 2, ['airport-I4', 'airport-S14']\n"
+      "Template IDS in df train: 8, ['airport-I5' 'airport-S10' 'airport-D7' 'airport-S8' 'airport-D6'\n",
+      " 'airport-I9' 'airport-S11' 'airport-U3']\n",
+      "Template IDS in df test:   10, ['airport-D6' 'airport-S10' 'airport-I4' 'airport-I9' 'airport-I5'\n",
+      " 'airport-S11' 'airport-U3' 'airport-S8' 'airport-D7' 'airport-S14']\n",
+      "Template IDs in train but NOT in test: 2, ['airport-I4', 'airport-S14']\n",
+      "Templates IDs with no attacks: {'airport-D7'}\n"
      ]
     }
    ],
    "source": [
-    "def display_ids_per_set(df: pd.DataFrame): \n",
+    "def display_ids_per_set(df: pd.DataFrame):\n",
     "    df_train = df[df[\"split\"] == \"train\"]\n",
     "    df_test = df[df[\"split\"] == \"test\"]\n",
     "\n",
-    "    tids_train  = df_train['query_template_id'].unique()\n",
-    "    tids_test = df_test['query_template_id'].unique()\n",
+    "    tids_train = df_train[\"query_template_id\"].unique()\n",
+    "    tids_test = df_test[\"query_template_id\"].unique()\n",
     "    tids_complement = set(tids_test) - set(tids_train)\n",
     "    print(f\"Template IDS in df train: {len(tids_train)}, {tids_train}\")\n",
     "    print(f\"Template IDS in df test:   {len(tids_test)}, {tids_test}\")\n",
-    "    print(f\"Template IDs in train but NOT in test: {len(tids_complement)}, {sorted(tids_complement)}\")\n",
-    "    \n",
+    "    print(\n",
+    "        f\"Template IDs in train but NOT in test: {len(tids_complement)}, {sorted(tids_complement)}\"\n",
+    "    )\n",
+    "\n",
+    "    # Compute which template only have normal queries\n",
+    "    df_n = df.loc[df[\"label\"] == 0,\"query_template_id\"].unique()\n",
+    "    df_a = df.loc[df[\"label\"] == 1,\"query_template_id\"].unique()\n",
+    "\n",
+    "    print(f\"Templates IDs with no attacks: {set(df_n) - set(df_a)}\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "display_ids_per_set(df)"
    ]
   },
