--- a/tests/test_train_ratios.ipynb
+++ b/tests/test_train_ratios.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 58,
    "id": "b1871057",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2 "
@@ -13,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 59,
    "id": "e40df6d1",
    "metadata": {},
    "outputs": [],
@@ -24,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 60,
    "id": "a46d1bd5",
    "metadata": {},
    "outputs": [
@@ -66,76 +75,76 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>DELETE FROM navaids WHERE ident = \"PO\";</td>\n",
+       "      <td>SELECT a.id, a.name, a.municipality, a.iso_cou...</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>delete</td>\n",
-       "      <td>airport-D6</td>\n",
+       "      <td>select</td>\n",
+       "      <td>airport-S10</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>test</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>SELECT a.id, a.name, a.municipality, a.iso_cou...</td>\n",
+       "      <td>INSERT INTO runways (airport_ref, airport_iden...</td>\n",
        "      <td>1</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>recon</td>\n",
-       "      <td>commentbeforeparentheses</td>\n",
+       "      <td>space2comment</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>select</td>\n",
-       "      <td>airport-S10</td>\n",
-       "      <td>error-3</td>\n",
+       "      <td>insert</td>\n",
+       "      <td>airport-I9</td>\n",
+       "      <td>error-7</td>\n",
        "      <td>error</td>\n",
        "      <td>test</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>SELECT a.id, a.name, a.municipality, a.iso_cou...</td>\n",
+       "      <td>UPDATE airport SET wikipedia_link = \"https://e...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>recon</td>\n",
+       "      <td>equaltolike</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>update</td>\n",
+       "      <td>airport-U3</td>\n",
+       "      <td>error-6</td>\n",
+       "      <td>error</td>\n",
+       "      <td>test</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>SHOW GLOBAL STATUS</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>select</td>\n",
-       "      <td>airport-S10</td>\n",
+       "      <td>admin</td>\n",
+       "      <td>airport-admin5</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>test</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>INSERT INTO regions (code, name, continent, is...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>recon</td>\n",
-       "      <td>space2mysqlblank</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>insert</td>\n",
-       "      <td>airport-I4</td>\n",
-       "      <td>error-9</td>\n",
-       "      <td>error</td>\n",
        "      <td>test</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>SELECT a.id, a.name, a.municipality, a.iso_cou...</td>\n",
+       "      <td>DELETE FROM navaids WHERE ident = \"GS'||(SELEC...</td>\n",
        "      <td>1</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>recon</td>\n",
-       "      <td>randomcase</td>\n",
+       "      <td>sleep2getlock</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>select</td>\n",
-       "      <td>airport-S10</td>\n",
-       "      <td>error-3</td>\n",
+       "      <td>delete</td>\n",
+       "      <td>airport-D6</td>\n",
+       "      <td>error-1</td>\n",
        "      <td>error</td>\n",
        "      <td>test</td>\n",
        "    </tr>\n",
@@ -155,7 +164,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>37011</th>\n",
+       "      <th>36879</th>\n",
        "      <td>SELECT a.id, a.ident, a.name, a.latitude_deg, ...</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
@@ -170,22 +179,7 @@
        "      <td>test</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>37012</th>\n",
-       "      <td>INSERT INTO regions (code, name, continent, is...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>insert</td>\n",
-       "      <td>airport-I4</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>test</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37013</th>\n",
+       "      <th>36880</th>\n",
        "      <td>SELECT a.id, a.ident, a.name, a.latitude_deg, ...</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
@@ -200,7 +194,7 @@
        "      <td>test</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>37014</th>\n",
+       "      <th>36881</th>\n",
        "      <td>SELECT a.id, a.ident, a.name, a.latitude_deg, ...</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
@@ -215,7 +209,22 @@
        "      <td>test</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>37015</th>\n",
+       "      <th>36882</th>\n",
+       "      <td>SELECT a.id, a.ident, a.name, a.latitude_deg, ...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>select</td>\n",
+       "      <td>airport-S14</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>test</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36883</th>\n",
        "      <td>SELECT a.id, a.ident, a.name, a.latitude_deg, ...</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
@@ -231,63 +240,50 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>37016 rows × 12 columns</p>\n",
+       "<p>36884 rows × 12 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                                              full_query  label  \\\n",
-       "0                DELETE FROM navaids WHERE ident = \"PO\";      0   \n",
-       "1      SELECT a.id, a.name, a.municipality, a.iso_cou...      1   \n",
-       "2      SELECT a.id, a.name, a.municipality, a.iso_cou...      0   \n",
-       "3      INSERT INTO regions (code, name, continent, is...      1   \n",
-       "4      SELECT a.id, a.name, a.municipality, a.iso_cou...      1   \n",
+       "0      SELECT a.id, a.name, a.municipality, a.iso_cou...      0   \n",
+       "1      INSERT INTO runways (airport_ref, airport_iden...      1   \n",
+       "2      UPDATE airport SET wikipedia_link = \"https://e...      1   \n",
+       "3                                    SHOW GLOBAL STATUS       0   \n",
+       "4      DELETE FROM navaids WHERE ident = \"GS'||(SELEC...      1   \n",
        "...                                                  ...    ...   \n",
-       "37011  SELECT a.id, a.ident, a.name, a.latitude_deg, ...      0   \n",
-       "37012  INSERT INTO regions (code, name, continent, is...      0   \n",
-       "37013  SELECT a.id, a.ident, a.name, a.latitude_deg, ...      0   \n",
-       "37014  SELECT a.id, a.ident, a.name, a.latitude_deg, ...      0   \n",
-       "37015  SELECT a.id, a.ident, a.name, a.latitude_deg, ...      0   \n",
+       "36879  SELECT a.id, a.ident, a.name, a.latitude_deg, ...      0   \n",
+       "36880  SELECT a.id, a.ident, a.name, a.latitude_deg, ...      0   \n",
+       "36881  SELECT a.id, a.ident, a.name, a.latitude_deg, ...      0   \n",
+       "36882  SELECT a.id, a.ident, a.name, a.latitude_deg, ...      0   \n",
+       "36883  SELECT a.id, a.ident, a.name, a.latitude_deg, ...      0   \n",
        "\n",
-       "      attack_payload attack_desc attack_stage             tamper_method  \\\n",
-       "0                NaN         NaN          NaN                       NaN   \n",
-       "1                NaN         NaN        recon  commentbeforeparentheses   \n",
-       "2                NaN         NaN          NaN                       NaN   \n",
-       "3                NaN         NaN        recon          space2mysqlblank   \n",
-       "4                NaN         NaN        recon                randomcase   \n",
-       "...              ...         ...          ...                       ...   \n",
-       "37011            NaN         NaN          NaN                       NaN   \n",
-       "37012            NaN         NaN          NaN                       NaN   \n",
-       "37013            NaN         NaN          NaN                       NaN   \n",
-       "37014            NaN         NaN          NaN                       NaN   \n",
-       "37015            NaN         NaN          NaN                       NaN   \n",
+       "      attack_payload attack_desc attack_stage  tamper_method sqlmap_status  \\\n",
+       "0                NaN         NaN          NaN            NaN           NaN   \n",
+       "1                NaN         NaN        recon  space2comment           NaN   \n",
+       "2                NaN         NaN        recon    equaltolike           NaN   \n",
+       "3                NaN         NaN          NaN            NaN           NaN   \n",
+       "4                NaN         NaN        recon  sleep2getlock           NaN   \n",
+       "...              ...         ...          ...            ...           ...   \n",
+       "36879            NaN         NaN          NaN            NaN           NaN   \n",
+       "36880            NaN         NaN          NaN            NaN           NaN   \n",
+       "36881            NaN         NaN          NaN            NaN           NaN   \n",
+       "36882            NaN         NaN          NaN            NaN           NaN   \n",
+       "36883            NaN         NaN          NaN            NaN           NaN   \n",
        "\n",
-       "      sqlmap_status statement_type query_template_id attack_id  \\\n",
-       "0               NaN         delete        airport-D6       NaN   \n",
-       "1               NaN         select       airport-S10   error-3   \n",
-       "2               NaN         select       airport-S10       NaN   \n",
-       "3               NaN         insert        airport-I4   error-9   \n",
-       "4               NaN         select       airport-S10   error-3   \n",
-       "...             ...            ...               ...       ...   \n",
-       "37011           NaN         select       airport-S14       NaN   \n",
-       "37012           NaN         insert        airport-I4       NaN   \n",
-       "37013           NaN         select       airport-S14       NaN   \n",
-       "37014           NaN         select       airport-S14       NaN   \n",
-       "37015           NaN         select       airport-S14       NaN   \n",
+       "      statement_type query_template_id attack_id attack_technique split  \n",
+       "0             select       airport-S10       NaN              NaN  test  \n",
+       "1             insert        airport-I9   error-7            error  test  \n",
+       "2             update        airport-U3   error-6            error  test  \n",
+       "3              admin    airport-admin5       NaN              NaN  test  \n",
+       "4             delete        airport-D6   error-1            error  test  \n",
+       "...              ...               ...       ...              ...   ...  \n",
+       "36879         select       airport-S14       NaN              NaN  test  \n",
+       "36880         select       airport-S14       NaN              NaN  test  \n",
+       "36881         select       airport-S14       NaN              NaN  test  \n",
+       "36882         select       airport-S14       NaN              NaN  test  \n",
+       "36883         select       airport-S14       NaN              NaN  test  \n",
        "\n",
-       "      attack_technique split  \n",
-       "0                  NaN  test  \n",
-       "1                error  test  \n",
-       "2                  NaN  test  \n",
-       "3                error  test  \n",
-       "4                error  test  \n",
-       "...                ...   ...  \n",
-       "37011              NaN  test  \n",
-       "37012              NaN  test  \n",
-       "37013              NaN  test  \n",
-       "37014              NaN  test  \n",
-       "37015              NaN  test  \n",
-       "\n",
-       "[37016 rows x 12 columns]"
+       "[36884 rows x 12 columns]"
       ]
      },
      "metadata": {},
@@ -322,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 61,
    "id": "1341d47f",
    "metadata": {},
    "outputs": [
@@ -330,10 +326,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of attacks in train: 4132\n",
-      "Number of normal in train: 4261\n",
-      "Number of attacks in test: 2382\n",
-      "Number of normal in test: 26241\n"
+      "Number of attacks in train: 4116\n",
+      "Number of normal in train: 4309\n",
+      "Number of attacks in test: 2369\n",
+      "Number of normal in test: 26090\n"
      ]
     }
    ],
@@ -355,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 62,
    "id": "a6b80761",
    "metadata": {},
    "outputs": [
@@ -363,12 +359,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Template IDS in df train: 8, ['airport-I5' 'airport-S10' 'airport-D7' 'airport-S8' 'airport-D6'\n",
-      " 'airport-I9' 'airport-S11' 'airport-U3']\n",
-      "Template IDS in df test:   10, ['airport-D6' 'airport-S10' 'airport-I4' 'airport-I9' 'airport-I5'\n",
-      " 'airport-S11' 'airport-U3' 'airport-S8' 'airport-D7' 'airport-S14']\n",
+      "Template IDS in df train: 22, ['airport-S10' 'airport-S11' 'airport-D6' 'airport-S8' 'airport-I9'\n",
+      " 'airport-I5' 'airport-U3' 'airport-admin14' 'airport-admin9'\n",
+      " 'airport-admin8' 'airport-admin3' 'airport-admin13' 'airport-D7'\n",
+      " 'airport-admin11' 'airport-admin4' 'airport-admin5' 'airport-admin1'\n",
+      " 'airport-admin12' 'airport-admin7' 'airport-admin10' 'airport-admin6'\n",
+      " 'airport-admin2']\n",
+      "Template IDS in df test:   24, ['airport-S10' 'airport-I9' 'airport-U3' 'airport-admin5' 'airport-D6'\n",
+      " 'airport-S8' 'airport-I4' 'airport-S11' 'airport-S14' 'airport-I5'\n",
+      " 'airport-D7' 'airport-admin9' 'airport-admin14' 'airport-admin11'\n",
+      " 'airport-admin13' 'airport-admin3' 'airport-admin6' 'airport-admin1'\n",
+      " 'airport-admin2' 'airport-admin4' 'airport-admin7' 'airport-admin8'\n",
+      " 'airport-admin12' 'airport-admin10']\n",
       "Template IDs in train but NOT in test: 2, ['airport-I4', 'airport-S14']\n",
-      "Templates IDs with no attacks: {'airport-D7'}\n"
+      "Templates IDs with no attacks: {'airport-admin6', 'airport-admin3', 'airport-admin11', 'airport-admin10', 'airport-admin2', 'airport-admin1', 'airport-admin4', 'airport-admin14', 'airport-admin5', 'airport-admin7', 'airport-admin12', 'airport-D7', 'airport-admin9', 'airport-admin8', 'airport-admin13'}\n"
      ]
     }
    ],
@@ -400,11 +404,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "fe9ef877",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Proportion amongst normal: statement_type\n",
+      "select    0.861245\n",
+      "insert    0.105628\n",
+      "delete    0.015066\n",
+      "admin     0.010263\n",
+      "update    0.007796\n",
+      "Name: proportion, dtype: float64\n",
+      "Proportion amongst attacks: statement_type\n",
+      "insert    0.524904\n",
+      "select    0.366230\n",
+      "update    0.073863\n",
+      "delete    0.035004\n",
+      "Name: proportion, dtype: float64\n",
+      "Proportion amongst train: statement_type\n",
+      "select    0.582671\n",
+      "insert    0.275727\n",
+      "update    0.059466\n",
+      "delete    0.055905\n",
+      "admin     0.026231\n",
+      "Name: proportion, dtype: float64\n",
+      "Proportion amongst test: statement_type\n",
+      "select    0.830915\n",
+      "insert    0.150813\n",
+      "update    0.007555\n",
+      "delete    0.007520\n",
+      "admin     0.003198\n",
+      "Name: proportion, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "def _stmt_proportion(df: pd.DataFrame):\n",
+    "    return df['statement_type'].value_counts(normalize=True)\n",
+    "\n",
+    "def display_ratio_per_stmt(df : pd.DataFrame):\n",
+    "    \n",
+    "    df_a = df[df[\"label\"] == 1]\n",
+    "    df_n = df[df[\"label\"] == 0]\n",
+    "    print(f\"Proportion amongst normal: {_stmt_proportion(df=df_n)}\")\n",
+    "    print(f\"Proportion amongst attacks: {_stmt_proportion(df=df_a)}\")\n",
+    "        \n",
+    "    df_train = df[df[\"split\"] == \"train\"]\n",
+    "    df_test = df[df[\"split\"] == \"test\"]\n",
+    "    print(f\"Proportion amongst train: {_stmt_proportion(df=df_train)}\")\n",
+    "    print(f\"Proportion amongst test: {_stmt_proportion(df=df_test)}\")\n",
+    "\n",
+    "display_ratio_per_stmt(df=df)"
+   ]
   }
  ],
  "metadata": {
