feat(generation): fix template issue

--- a/tests/dataset_stats.ipynb
+++ b/tests/dataset_stats.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "c50d7182",
    "metadata": {},
    "outputs": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "0e68ff3e",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "2339d7df",
    "metadata": {},
    "outputs": [
@@ -41,7 +41,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/nix-shell-26416-0/ipykernel_33206/275461181.py:4: DtypeWarning: Columns (4,5) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/nix-shell-26416-0/ipykernel_39998/842013898.py:4: DtypeWarning: Columns (4) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv(\n"
      ]
     }
@@ -79,10 +79,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "id": "9ba4af9a",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of attack campaign:  234\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -1534,23 +1541,157 @@
    "source": [
     "def display_counts_recon(df : pd.DataFrame):\n",
     "    result = df.groupby('attack_id')['attack_stage'].value_counts().unstack(fill_value=0)\n",
-    "    \n",
+    "    print(\"Number of attack campaign: \", len(result))\n",
+    "\n",
     "    if full:\n",
     "        with pd.option_context('display.max_rows', None, \n",
     "                        'display.max_columns', None,\n",
     "                        'display.width', None,\n",
     "                        'display.max_colwidth', None):\n",
     "            display(result)\n",
+    "        \n",
     "    else: \n",
     "        display(result)\n",
-    "\n",
     "        \n",
     "_ = display_counts_recon(df)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
+   "id": "dca6b118",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/nix-shell-26416-0/ipykernel_39998/125620900.py:13: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  unique['success'] = unique['attack_id'].isin(exploit_attacks)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>attack_technique</th>\n",
+       "      <th>total</th>\n",
+       "      <th>successful</th>\n",
+       "      <th>success_rate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>error</td>\n",
+       "      <td>39</td>\n",
+       "      <td>39</td>\n",
+       "      <td>1.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>time</td>\n",
+       "      <td>39</td>\n",
+       "      <td>34</td>\n",
+       "      <td>0.8718</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>boolean</td>\n",
+       "      <td>39</td>\n",
+       "      <td>33</td>\n",
+       "      <td>0.8462</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>stacked</td>\n",
+       "      <td>39</td>\n",
+       "      <td>29</td>\n",
+       "      <td>0.7436</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>union</td>\n",
+       "      <td>39</td>\n",
+       "      <td>15</td>\n",
+       "      <td>0.3846</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>inline</td>\n",
+       "      <td>39</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.1282</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  attack_technique  total  successful  success_rate\n",
+       "1            error     39          39        1.0000\n",
+       "4             time     39          34        0.8718\n",
+       "0          boolean     39          33        0.8462\n",
+       "3          stacked     39          29        0.7436\n",
+       "5            union     39          15        0.3846\n",
+       "2           inline     39           5        0.1282"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "def calculate_attack_success_rate(df):\n",
+    "    \"\"\"\n",
+    "    Calculate success rate per attack technique based on unique attack IDs.\n",
+    "    \n",
+    "    Args:\n",
+    "        df: DataFrame with columns 'attack_id', 'attack_technique', 'attack_status'\n",
+    "    \n",
+    "    Returns:\n",
+    "        DataFrame with attack_technique, total_attacks, successful_attacks, success_rate\n",
+    "    \"\"\"\n",
+    "    # First, fetch the information on whether the attack was a success for each attack campaign.\n",
+    "    exploit_attacks = set(df[df['attack_stage'] == 'exploit']['attack_id'])\n",
+    "    unique = df.drop_duplicates('attack_id')\n",
+    "    unique['success'] = unique['attack_id'].isin(exploit_attacks)\n",
+    "    \n",
+    "    # Then we group by technique and provide both count and sum + a success rate.\n",
+    "    result = unique.groupby('attack_technique')['success'].agg(['count', 'sum']).reset_index()\n",
+    "    result.columns = ['attack_technique', 'total', 'successful']\n",
+    "    result['success_rate'] = (result['successful'] / result['total']).round(4)\n",
+    "    result = result.sort_values('success_rate', ascending=False)\n",
+    "    display(result)\n",
+    "    \n",
+    "\n",
+    "calculate_attack_success_rate(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "id": "fafeeb45",
    "metadata": {},
    "outputs": [
@@ -1583,7 +1724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "5d6716ce",
    "metadata": {},
    "outputs": [
@@ -1630,7 +1771,7 @@
     "    tids_train = df_train[\"query_template_id\"].unique()\n",
     "    tids_test = df_test[\"query_template_id\"].unique()\n",
     "    tids_complement = set(tids_test) - set(tids_train)\n",
-    "    print(f\"Template IDS in df train: {len(tids_train)}, {tids_train}\")\n",
+    "    print(f\"Template IDS in df train: {len(tids_train)}, {sorted(tids_train)}\")\n",
     "    print(f\"Template IDS in df test:   {len(tids_test)}, {tids_test}\")\n",
     "    print(\n",
     "        f\"Template IDs in test but NOT in train: {len(tids_complement)}, {tids_complement}\"\n",
@@ -1648,7 +1789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "id": "df39675c",
    "metadata": {},
    "outputs": [
@@ -1682,7 +1823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "id": "f062fd42",
    "metadata": {},
    "outputs": [
@@ -1743,7 +1884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "7d183469",
    "metadata": {},
    "outputs": [
